@@ -236,7 +236,7 @@ class OrganizationController extends AbstractRestController
         required: true,
         content: [
             new OA\MediaType(
-                mediaType: 'multipart/form-data',
+                mediaType: 'application/x-www-form-urlencoded',
                 schema: new OA\Schema(ref: new Model(type: AddOrganization::class))
             ),
         ]
